# fake-artist-rs

./: Cargo.toml  Dockerfile  docker-compose.yml  justfile
.github/workflows/: ci.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  socket.ts
frontend/src/contexts/: SocketContext.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/pages/: Homepage.tsx  Room.tsx
frontend/src/types/: ChatMessage.ts  ChatMsg.ts  Curve.ts  DrawEvent.ts  EventIn.ts  EventOut.ts  Game.ts  GameOverState.ts  InGameState.ts  JoinEvent.ts  LobbyState.ts  NextTurnEvent.ts  Player.ts  VoteFakeEvent.ts  VotesTotalEvent.ts  Winner.ts  Word.ts
src/: game.rs  game_server.rs  lists.rs  main.rs  socket.rs
