[package]
name = "fake-artist"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
itertools = "0.13.0"
ractor = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.132"
socketioxide = { version = "0.14.1", features = ["extensions", "state"] }
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tower-http = { version = "0.6.1", features = ["fs", "set-header"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ts-rs = { version = "10.0.0", features = ["uuid-impl"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
